fix case in photo title Jumper1Tiny.png

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ header {
 
 
 .jumper1 {
-    background-image: url(../img/jumper1Tiny.png);
+    background-image: url(../img/Jumper1Tiny.png);
     background-position-x: 75%;
     background-position-y: 20%;
     width: 79px;
